# Aurelia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_trace.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
aurelia-common/: Cargo.toml
aurelia-common/src/: lib.rs
aurelia-protocol/: Cargo.toml
aurelia-protocol/src/: lib.rs
aurelia-region/: Cargo.toml
aurelia-region/src/: lib.rs
aurelia-server/: Cargo.toml
aurelia-server/src/: lib.rs  main.rs  properties.rs
aurelia-world/: Cargo.toml
aurelia-world/src/: lib.rs  nbt.rs  vanilla_beta173.rs
docs/: ARCHITECTURE.md  BETA_173_LOGIN_RESEARCH.md  BETA_173_PROTOCOL.md  CLEAN_ROOM.md  CLEAN_ROOM_POLICY.md  COMPATIBILITY.md  DEVELOPMENT.md  GITHUB_REPO_SETTINGS.md  REGION_THREADING.md  RELEASE_CHECKLIST.md  ROADMAP.md  SPONSORSHIP.md  TODO.md  VANILLA_PARITY_MATRIX.md
docs/releases/: 0.2.0.md  0.2.2.md
scripts/: setup-github-labels.sh  setup-github-metadata.sh
