[package]
name = "aurelia-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aurelia-common = { path = "../aurelia-common" }
aurelia-protocol = { path = "../aurelia-protocol" }
aurelia-region = { path = "../aurelia-region" }
aurelia-world = { path = "../aurelia-world" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "aurelia-server"
path = "src/main.rs"

